CursorにJavaの拡張機能追加に伴う変更。